SERVER-50130 Ensure maxTimeMS can expire if used with the failCommand blockConnection option